# digi-pets-20

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  demo_multiuser.sh  docker-compose.yml
.github/workflows/: ci.yml
_codeql_build_dir/: Makefile  compile_commands.json
_codeql_build_dir/client/: Makefile  digipets_cli
_codeql_build_dir/common/: Makefile
_codeql_build_dir/server/: Makefile  digipets_server
_codeql_build_dir/tests/: Makefile  digipets_tests  digipets_tests[1]_include.cmake  digipets_tests[1]_tests.cmake
client/: CMakeLists.txt
client/include/: digipets_client.hpp
client/src/: cli_main.cpp  digipets_client.cpp
common/: CMakeLists.txt
common/include/: pet.hpp  user.hpp
common/src/: pet.cpp  user.cpp
docker/: run.sh
docs/: API.md  DEPLOYMENT.md  MULTIUSER_API.md
server/: CMakeLists.txt
server/include/: pet_manager.hpp  user_manager.hpp
server/src/: main.cpp  pet_manager.cpp  user_manager.cpp
tests/: CMakeLists.txt  test_pet.cpp  test_pet_manager.cpp  test_user.cpp
